--- a/src/JpegLibrary/JpegLibrary.csproj
+++ b/src/JpegLibrary/JpegLibrary.csproj
@@ -2,7 +2,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <Title>JpegLibrary</Title>
-    <Description>A native C# implementation of JPEG decoder and encoder.</Description>
+    <Description>JPEG decoder, encoder and optimizer implemented in C#.</Description>
     <TargetFrameworks>net45;netstandard1.1;netstandard2.0;netcoreapp2.1;netstandard2.1;netcoreapp3.0</TargetFrameworks>
     <Nullable>enable</Nullable>
     <Copyright>Copyright (c) 2019-2020 Mechanika Design</Copyright>
