--- a/src/JpegFile/JpegFile.csproj
+++ b/src/JpegFile/JpegFile.csproj
@@ -4,13 +4,9 @@
   <PropertyGroup>
     <Title>JpegFile</Title>
     <Description>A native C# library for loading, saving and optimizing JPEG files.</Description>
-    <TargetFrameworks>net45;netstandard1.1;netstandard2.0;netstandard2.1;netcoreapp3.1;net6</TargetFrameworks>
+    <TargetFrameworks>net45;netstandard1.1;netstandard2.0;netcoreapp2.1;netstandard2.1;netcoreapp3.0;net5</TargetFrameworks>
     <Nullable>enable</Nullable>
   </PropertyGroup>
-
-  <ItemGroup>
-    <PackageReference Include="Microsoft.NETFramework.ReferenceAssemblies" PrivateAssets="All" Version="1.0.0-preview.2" />
-  </ItemGroup>
 
   <PropertyGroup Condition="'$(TargetFramework)' == 'net45' OR '$(TargetFramework)' == 'netstandard1.1' OR '$(TargetFramework)' == 'netstandard2.0'">
     <DefineConstants>$(DefineConstants);NO_MATH_CLAMP;NO_MATHF;NO_FAST_SPAN</DefineConstants>
@@ -24,7 +20,6 @@
   <PropertyGroup Condition="'$(TargetFramework)' == 'net45' OR '$(TargetFramework)' == 'netstandard1.1' OR '$(TargetFramework)' == 'netstandard2.0' OR '$(TargetFramework)' == 'netcoreapp2.1' OR '$(TargetFramework)' == 'netstandard2.1' OR '$(TargetFramework)' == 'netcoreapp3.0'">
     <DefineConstants>$(DefineConstants);NO_SKIP_LOCALS_INIT</DefineConstants>
   </PropertyGroup>
-
   <ItemGroup Condition="'$(TargetFramework)' == 'net45' OR '$(TargetFramework)' == 'netstandard1.1' OR '$(TargetFramework)' == 'netstandard2.0' OR '$(TargetFramework)' == 'netcoreapp2.1' OR '$(TargetFramework)' == 'netstandard2.1' OR '$(TargetFramework)' == 'netcoreapp3.0'">
     <PackageReference Include="System.Runtime.CompilerServices.Unsafe" Version="$(SystemRuntimeCompilerServicesUnsafePackageVersion)" />
   </ItemGroup>
