--- a/src/JpegFile/JpegFile.csproj
+++ b/src/JpegFile/JpegFile.csproj
@@ -4,7 +4,7 @@
   <PropertyGroup>
     <Title>JpegFile</Title>
     <Description>A native C# library for loading, saving and optimizing JPEG files.</Description>
-    <TargetFrameworks>net45;netstandard1.1;netstandard2.0;netcoreapp2.1;netstandard2.1;netcoreapp3.0;net5</TargetFrameworks>
+    <TargetFrameworks>net6</TargetFrameworks>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
